@@ -172,6 +172,7 @@
     <File name="gtk-gui/MonoDevelop.Core.Gui.Dialogs.OptionsDialog.cs" subtype="Code" buildaction="Compile" />
     <File name="icons/pad-task-list-24.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="MonoDevelop.Core.Gui/GLibLogging.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.Core.Gui.Codons/MimeTypeNode.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
